tests/baselines/reference/ipromise2.errors.txt
ipromise2.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
ipromise2.ts(1,24): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== ipromise2.ts (2 errors) ====
    declare module Windows.Foundation {
                   ~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                           ~~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface IPromise<T> {
            then<U>(success?: (value: T) => IPromise<U>, error?: (error: any) => IPromise<U>, progress?: (progress: any) => void ): Windows.Foundation.IPromise<U>;
            then<U>(success?: (value: T) => IPromise<U>, error?: (error: any) => U, progress?: (progress: any) => void ): Windows.Foundation.IPromise<U>;
            then<U>(success?: (value: T) => U, error?: (error: any) => IPromise<U>, progress?: (progress: any) => void ): Windows.Foundation.IPromise<U>;
            then<U>(success?: (value: T) => U, error?: (error: any) => U, progress?: (progress: any) => void ): Windows.Foundation.IPromise<U>;
            done<U>(success?: (value: T) => any, error?: (error: any) => any, progress?: (progress: any) => void ): void;
            value: T;
        }
    }
    
    var p: Windows.Foundation.IPromise<string>;
    
    var p2 = p.then(function (s) {
        return 34;
    } );
    
    
    var x: number = p2.value;
    
    